--- a/roles/locale/tasks/main.yml
+++ b/roles/locale/tasks/main.yml
@@ -1,15 +1,14 @@
 ---
 - name: enable locale in locale.gen
   lineinfile:
-    dest: rootfs_files/etc/locale.gen
+    dest: /etc/locale.gen
     regexp: '^(#|){{ locale }}'
     line: '{{ locale }}'
 
 - name: generate locale
   command: locale-gen
-  delegate_to: chroot
 
 - name: set locale
   copy:
-    dest: rootfs_files/etc/locale.conf
+    dest: '/etc/locale.conf'
     content: 'LANG={{ locale }}'
